getComputedStyle gives incorrect information for 'height' property https://bugs.webkit.org/show_bug.cgi?id=33593

Reviewed by David Hyatt.

Source/WebCore:

Make sure that the contentBoxRect doesn't take into account the
intrinsic padding when querying it. As stated by http://www.w3.org/TR/css3-box/#the-lsquo0
the height is the content area which doesn't include the intrinsic padding, the border, and
the padding.

Test: fast/css/getComputedStyle/getComputedStyle-height.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
* editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::removeNode):
* rendering/RenderBox.h:
(WebCore::RenderBox::contentBoxRect):
(WebCore::RenderBox::contentWidth):
(WebCore::RenderBox::contentHeight):
(WebCore::RenderBox::contentLogicalWidth):
(WebCore::RenderBox::contentLogicalHeight):
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paddingTop):
(WebCore::RenderBoxModelObject::paddingBottom):
(WebCore::RenderBoxModelObject::paddingLeft):
(WebCore::RenderBoxModelObject::paddingRight):
(WebCore::RenderBoxModelObject::paddingBefore):
(WebCore::RenderBoxModelObject::paddingAfter):
(WebCore::RenderBoxModelObject::paddingStart):
(WebCore::RenderBoxModelObject::paddingEnd):
* rendering/RenderBoxModelObject.h:
(RenderBoxModelObject):
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paddingTop):
(WebCore::RenderTableCell::paddingBottom):
(WebCore::RenderTableCell::paddingLeft):
(WebCore::RenderTableCell::paddingRight):
(WebCore::RenderTableCell::paddingBefore):
(WebCore::RenderTableCell::paddingAfter):
(WebCore::RenderTableCell::cellBaselinePosition):
* rendering/RenderTableCell.h:
(RenderTableCell):
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::firstLineBoxBaseline):

LayoutTests:

Make sure that the contentBoxRect doesn't take into account the
intrinsic padding.

* fast/css/getComputedStyle/getComputedStyle-height-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-height.html: Added.


Canonical link: https://commits.webkit.org/97467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109818 268f45cc-cd09-0410-ab3c-d52691b4dbfc